adding all init params to yepp.json

--- a/lib/templates/yepp.json.tmpl
+++ b/lib/templates/yepp.json.tmpl
@@ -8,5 +8,11 @@
     "https://github.com/EddyVerbruggen/SocialSharing-PhoneGap-Plugin.git"
   ],
   "application": "#application#",
+  "description": "#description#",
+  "id": "#id#",
+  "version": "#version#",
+  "author": "#author#",
+  "email": "#email#",
+  "url": "#url#",
   "keystore": "<fill in your keystore location>"
 }
