added init for mobile angular

--- a/lib/templates/yepp.json.tmpl
+++ b/lib/templates/yepp.json.tmpl
@@ -1,12 +1,6 @@
 {
-	"platforms": [
-    "android"
-	],
-  	"plugins": [
-  	"org.apache.cordova.camera",
-  	"org.apache.cordova.geolocation",
-    "https://github.com/EddyVerbruggen/SocialSharing-PhoneGap-Plugin.git"
-  ],
+	"platforms": [],
+  "plugins": [],
   "application": "#application#",
   "description": "#description#",
   "id": "#id#",
