--- a/lib/templates/mobileangular/bower.json.tmpl
+++ b/lib/templates/mobileangular/bower.json.tmpl
@@ -7,7 +7,10 @@
     "**/*.txt"
   ],
   "dependencies": {
-    
+    "mobile-angular-ui": "*",
+    "angular": "*",
+    "angular-route": "*",
+    "angular-resource": "*"
   },
   "devDependencies": {
     
