Configured Grunt with jshint and restructered scripts

--- a/lib/templates/yepp.json.tmpl
+++ b/lib/templates/yepp.json.tmpl
@@ -8,5 +8,8 @@
   "author": "#author#",
   "email": "#email#",
   "url": "#url#",
-  "keystore": "<fill in your keystore location>"
+  "android": {
+    "keystore": "",
+    "storepass": ""
+  }
 }
